--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
-</head>
 
+</head>
 <body>
   <nav class="navbar navbar-expand-lg sticky-top" aria-label="Barra de navegación principal">
     <div class="container">
@@ -19,15 +19,13 @@
         <i class="bi bi-stars text-warning"></i>
         <span class="ms-1">Eventos</span>
       </a>
-
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain" aria-controls="navMain" aria-expanded="false" aria-label="Alternar navegación">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
           <li class="nav-item"><a class="nav-link" href="#home">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="#account">Mi cuenta</a></li>
+          <li class="nav-item"><a class="nav-link" href="profile.html">Mi Perfil</a></li>
           <li class="nav-item"><a class="nav-link" href="#login">Ingresar</a></li>
           <li class="nav-item ms-lg-3">
             <button class="btn btn-sm btn-gradient d-flex align-items-center" type="button" data-bs-toggle="offcanvas" data-bs-target="#cartOffcanvas" aria-controls="cartOffcanvas" aria-label="Abrir carrito">
@@ -39,27 +37,18 @@
       </div>
     </div>
   </nav>
-
   <main>
     <!-- HOME -->
-    <section id="view-home" data-route="home" class="container" aria-labelledby="home-title"></section>
-
+    <section id="view-home" data-route="home" class="container section-content active" aria-labelledby="home-title"></section>
     <!-- EVENT DETAIL -->
-    <section id="view-event" data-route="event" class="container" aria-labelledby="event-title"></section>
-
+    <section id="view-event" data-route="event" class="container section-content" aria-labelledby="event-title"></section>
     <!-- CHECKOUT -->
-    <section id="view-checkout" data-route="checkout" class="container" aria-labelledby="checkout-title"></section>
-
+    <section id="view-checkout" data-route="checkout" class="container section-content" aria-labelledby="checkout-title"></section>
     <!-- CONFIRM -->
-    <section id="view-confirm" data-route="confirm" class="container" aria-labelledby="confirm-title"></section>
-
+    <section id="view-confirm" data-route="confirm" class="container section-content" aria-labelledby="confirm-title"></section>
     <!-- LOGIN/REGISTER -->
-    <section id="view-login" data-route="login" class="container" aria-labelledby="login-title"></section>
-
-    <!-- ACCOUNT -->
-    <section id="view-account" data-route="account" class="container" aria-labelledby="account-title"></section>
+    <section id="view-login" data-route="login" class="container section-content" aria-labelledby="login-title"></section>
   </main>
-
   <div class="offcanvas offcanvas-end" tabindex="-1" id="cartOffcanvas" aria-labelledby="cartOffcanvasLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title d-flex align-items-center" id="cartOffcanvasLabel">
@@ -90,13 +79,11 @@
       </div>
     </div>
   </div>
-
   <div class="position-fixed top-0 end-0 p-3" style="z-index: 1090;">
     <div id="toasts" class="toast-container"></div>
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="api.js" defer></script>
-  <script src="app.js" defer></script>
+  <script src="api.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
