--- a/3.html
+++ b/3.html
@@ -480,6 +480,9 @@
     mockSubmit(document.getElementById('modalSignup'), 'Cuenta creada. Bienvenido/a 👋');
 
   </script>
+    <script src="api.js" defer></script>
+  <script src="app.js" defer></script>
 </body>
 </html>
+
 
