--- a/3.html
+++ b/3.html
@@ -480,9 +480,10 @@
     mockSubmit(document.getElementById('modalSignup'), 'Cuenta creada. Bienvenido/a 👋');
 
   </script>
-    <script src="api.js" defer></script>
-  <script src="app.js" defer></script>
+  <script src="api.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
 
 
