--- a/profile.html
+++ b/profile.html
@@ -160,7 +160,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="Inicio.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link active" href="profile.html">Mi Perfil</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html#login">Ingresar</a></li>
           <li class="nav-item ms-lg-3">
