--- a/profile.html
+++ b/profile.html
@@ -151,7 +151,7 @@
 <body>
   <nav class="navbar navbar-expand-lg sticky-top" aria-label="Barra de navegación principal">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html" aria-label="Ir al inicio">
+      <a class="navbar-brand fw-bold" href="Inicio.html" aria-label="Ir al inicio">
         <i class="bi bi-stars text-warning"></i>
         <span class="ms-1">Eventos</span>
       </a>
