--- a/Inicio.html
+++ b/Inicio.html
@@ -81,7 +81,7 @@
   </style>
 </head>
 <body>
-  <!-- NAVBAR -->
+<!-- NAVBAR -->
   <nav id="topNav" class="navbar navbar-expand-lg bg-white sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#"><i class="bi bi-sun-fill text-warning me-2"></i><b>EventosUp • Piura</b></a>
@@ -90,10 +90,10 @@
       </button>
       <div id="navItems" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto align-items-lg-center">          
-          <li class="nav-item"><a class="nav-link" href="#beneficios">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="#como-funciona">Conócenos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#testimonios">Mi cuenta</a></li>
-          <li class="nav-item"><a class="nav-link" href="#piura">Ingresar</a></li>
+          <li class="nav-item"><a class="nav-link" href="Inicio.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="eventos1.html">Eventos</a></li>
+          <li class="nav-item"><a class="nav-link" href="profile.html">Mi perfil</a></li>
+          
           
           <li class="nav-item">
             <button class="btn btn-grad rounded-pill px-3 fw-semibold" data-bs-toggle="modal" data-bs-target="#authModal">
@@ -505,3 +505,4 @@
   </script>
 </body>
 </html>
+
