--- a/eventos1.html
+++ b/eventos1.html
@@ -31,7 +31,7 @@
       </button>
       <div id="navItems" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto align-items-lg-center">          
-          <li class="nav-item"><a class="nav-link" href="Inicio.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="eventos1.html">Eventos</a></li>
           
           
