--- a/eventos1.html
+++ b/eventos1.html
@@ -1,13 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Catálogo de Eventos</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body{background:#f7f8fa}
@@ -21,37 +18,12 @@
   </style>
 </head>
 <body>
-
-      <!-- NAVBAR -->
-  <nav id="topNav" class="navbar navbar-expand-lg bg-white sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="#"><i class="bi bi-sun-fill text-warning me-2"></i><b>EventosUp • Piura</b></a>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navItems">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="navItems" class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto align-items-lg-center">          
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="eventos1.html">Eventos</a></li>
-          
-          
-          <li class="nav-item">
-            <button class="btn btn-grad rounded-pill px-3 fw-semibold" data-bs-toggle="modal" data-bs-target="#authModal">
-              Únete gratis
-            </button>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
   <header class="py-4">
     <div class="container app-container d-flex align-items-center justify-content-between gap-3">
       <div class="d-flex align-items-center gap-2">
         <i class="bi bi-calendar3 text-primary fs-3"></i>
         <h1 class="h4 m-0">Catálogo de Eventos</h1>
       </div>
-      <!-- Toggle filters on mobile -->
       <button class="btn btn-outline-secondary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#filtersOffcanvas" aria-controls="filtersOffcanvas">
         <i class="bi bi-funnel me-2"></i>Filtros
       </button>
@@ -59,8 +31,21 @@
   </header>
 
   <main class="container app-container pb-5">
+    <!-- Banner interactivo de eventos destacados -->
+    <div id="featuredCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+      <div class="carousel-inner"></div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#featuredCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#featuredCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
+
     <div class="row g-3">
-      <!-- Sidebar: Offcanvas on mobile, static on lg+ -->
+      <!-- Sidebar / filtros -->
       <aside class="col-12 col-lg-3">
         <div class="offcanvas-lg offcanvas-start" tabindex="-1" id="filtersOffcanvas" aria-labelledby="filtersLabel">
           <div class="offcanvas-header border-bottom">
@@ -78,7 +63,6 @@
                       <input type="search" id="q" class="form-control" placeholder="Título o etiquetas…">
                     </div>
                   </div>
-
                   <div>
                     <label class="form-label">Categorías</label>
                     <div class="row row-cols-2 g-2">
@@ -90,7 +74,6 @@
                       <div class="form-check col"><input class="form-check-input" type="checkbox" value="education" id="cat-education"><label for="cat-education" class="form-check-label">Educación</label></div>
                     </div>
                   </div>
-
                   <div class="row g-2">
                     <div class="col-6">
                       <label for="from" class="form-label">Desde</label>
@@ -101,7 +84,6 @@
                       <input type="date" id="to" class="form-control">
                     </div>
                   </div>
-
                   <div class="row g-2">
                     <div class="col-6">
                       <label for="min" class="form-label">Precio mínimo (S/)</label>
@@ -112,7 +94,6 @@
                       <input type="number" id="max" class="form-control" inputmode="decimal" placeholder="500">
                     </div>
                   </div>
-
                   <div>
                     <label for="location" class="form-label">Ubicación</label>
                     <select id="location" class="form-select">
@@ -123,7 +104,6 @@
                       <option value="virtual">Virtual</option>
                     </select>
                   </div>
-
                   <div class="d-flex gap-2">
                     <button class="btn btn-primary" id="apply" type="button"><i class="bi bi-check2 me-1"></i>Aplicar</button>
                     <button class="btn btn-outline-secondary" id="clear" type="button"><i class="bi bi-eraser me-1"></i>Limpiar</button>
@@ -135,7 +115,7 @@
         </div>
       </aside>
 
-      <!-- Catalog -->
+      <!-- Catalogo -->
       <section class="col-12 col-lg-9" aria-live="polite">
         <div class="d-flex align-items-center justify-content-between mb-3">
           <h3 class="h5 m-0">Eventos</h3>
@@ -148,30 +128,8 @@
       </section>
     </div>
   </main>
-
-  <!-- Modal: vista rápida -->
-  <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title h6" id="eventModalLabel">Detalles del evento</h4>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body">
-          <img id="m-hero" class="img-fluid rounded mb-3" alt="Imagen del evento" />
-          <p class="mb-1 muted" id="m-meta"></p>
-          <h5 id="m-title" class="mb-1"></h5>
-          <p id="m-brief" class="mb-2 text-secondary"></p>
-          <div id="m-tags" class="d-flex flex-wrap gap-2"></div>
-        </div>
-        <div class="modal-footer">
-          <a id="m-link" class="btn btn-primary" href="#" target="_blank" rel="noopener"><i class="bi bi-box-arrow-up-right me-1"></i>Ver evento completo</a>
-          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-    <footer class="site-footer py-5">
+  <!-- FOOTER -->
+  <footer class="site-footer py-5">
   <div class="container">
     <div class="row gy-4">
       <!-- Marca + descripción + redes -->
@@ -237,10 +195,31 @@
     </div>
   </div>
 </footer>
-
+  <!-- Modal -->
+  <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title h6" id="eventModalLabel">Detalles del evento</h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body">
+          <img id="m-hero" class="img-fluid rounded mb-3" alt="Imagen del evento" />
+          <p class="mb-1 muted" id="m-meta"></p>
+          <h5 id="m-title" class="mb-1"></h5>
+          <p id="m-brief" class="mb-2 text-secondary"></p>
+          <div id="m-tags" class="d-flex flex-wrap gap-2"></div>
+        </div>
+        <div class="modal-footer">
+          <a id="m-link" class="btn btn-primary" href="#" target="_blank" rel="noopener"><i class="bi bi-box-arrow-up-right me-1"></i>Ver evento completo</a>
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
     // ===== Datos de ejemplo =====
@@ -262,7 +241,6 @@
     function formatPrice(v){ return v===0 ? 'Gratis' : new Intl.NumberFormat('es-PE',{style:'currency',currency:'PEN',maximumFractionDigits:0}).format(v); }
     function formatDate(iso){ const d=new Date(iso+'T00:00:00'); return new Intl.DateTimeFormat('es-PE',{dateStyle:'medium'}).format(d); }
 
-    // Render de tarjetas con Bootstrap
     function render(events){
       const grid = $('#grid');
       grid.innerHTML = '';
@@ -306,7 +284,7 @@
     function applyFilters(){
       const {q, from, to, min, max, location, cats} = getFilters();
       const out = EVENTS.filter(ev=>{
-        if(q){ const hay = `${ev.title} ${ev.tags.join(' ')}`.toLowerCase(); if(!hay.includes(q)) return false; }
+        if(q){ const hay = (ev.title + ' ' + ev.tags.join(' ')).toLowerCase(); if(!hay.includes(q)) return false; }
         if(cats.length && !cats.includes(ev.category)) return false;
         if(location && ev.location !== location) return false;
         if(from && new Date(ev.date) < from) return false;
@@ -323,11 +301,13 @@
       render(EVENTS);
     }
 
-    // Modal
     const modalEl = $('#eventModal');
     const modal = new bootstrap.Modal(modalEl);
+
+   
     function openModal(data){
-      $('#m-hero').src = data.image; $('#m-hero').alt = data.title;
+      $('#m-hero').src = data.image;
+      $('#m-hero').alt = data.title;
       $('#m-title').textContent = data.title;
       $('#m-meta').textContent = `${formatDate(data.date)} • ${data.location.toUpperCase()} • ${formatPrice(data.price)}`;
       $('#m-brief').textContent = data.brief;
@@ -336,8 +316,8 @@
       modal.show();
     }
 
-    // Delegación de eventos
-    $('#grid').addEventListener('click', (e)=>{
+    // Delegación de click para modal
+    $('#grid').addEventListener('click', e=>{
       const btn = e.target.closest('[data-quick]');
       if(!btn) return;
       const id = btn.getAttribute('data-quick');
@@ -348,14 +328,46 @@
     // Filtros
     $('#apply').addEventListener('click', applyFilters);
     $('#clear').addEventListener('click', clearFilters);
-    // Cambios en vivo
     $$('#filtersForm input, #filtersForm select').forEach(el=>{
       el.addEventListener('change', applyFilters);
       if(el.type==='search' || el.type==='number') el.addEventListener('input', ()=>{/* opcional: debounced */});
     });
 
-    // Init
+    // ===== Banner de eventos destacados =====
+    const FEATURED_EVENTS = EVENTS.slice(0, 3);
+
+    function renderFeatured(){
+      const carouselInner = document.querySelector('#featuredCarousel .carousel-inner');
+      carouselInner.innerHTML = '';
+      FEATURED_EVENTS.forEach((ev, idx)=>{
+        const active = idx === 0 ? 'active' : '';
+        const item = document.createElement('div');
+        item.className = `carousel-item ${active}`;
+        item.innerHTML = `
+          <a href="#" data-quick="${ev.id}" class="d-block position-relative">
+            <img src="${ev.image}" class="d-block w-100 rounded" alt="${ev.title}" style="height:400px; object-fit:cover;">
+            <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-2">
+              <h5>${ev.title}</h5>
+              <p>${formatDate(ev.date)} • ${ev.location.toUpperCase()} • ${formatPrice(ev.price)}</p>
+            </div>
+          </a>
+        `;
+        carouselInner.appendChild(item);
+      });
+    }
+
+    document.querySelector('#featuredCarousel').addEventListener('click', e=>{
+      const link = e.target.closest('[data-quick]');
+      if(!link) return;
+      const id = link.getAttribute('data-quick');
+      const ev = EVENTS.find(x=>x.id===id);
+      if(ev) openModal(ev);
+    });
+
+    // Inicializar
     render(EVENTS);
+    renderFeatured();
+
   </script>
 </body>
 </html>
