--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
   <style>
     :root{
-      --brand: #f59e0b;            /* Piura sol — ámbar */
-      --brand-2: #06b6d4;          /* mar del norte — cian */
+      --brand: #06b6d4;            /* mar del norte — cian */
+      --bs-primary: var(--brand);
+      --bs-primary-rgb: 6,182,212;
+      --bs-link-color: var(--brand);
+      --bs-link-hover-color: var(--brand);
       --ink: #0f172a;              /* Slate-900 */
       --muted: #475569;            /* Slate-600 */
       --bg-soft: #f8fafc;          /* Slate-50 */
@@ -28,14 +31,14 @@
     .navbar-brand b{ letter-spacing:.5px }
     .nav-shadow{ box-shadow: 0 10px 30px rgba(2,8,23,.06) }
     .btn-grad{
-      background: linear-gradient(135deg,var(--brand),var(--brand-2));
+      background: var(--brand);
       border:0;
     }
 
     /* HERO */
     .hero{
       position: relative;
-      background: radial-gradient(1200px 600px at 10% -10%, rgba(245,158,11,.18), transparent 60%),
+      background: radial-gradient(1200px 600px at 10% -10%, rgba(6,182,212,.18), transparent 60%),
                   radial-gradient(1200px 600px at 100% 0%, rgba(6,182,212,.18), transparent 55%);
       padding: 92px 0 60px;
     }
@@ -70,8 +73,8 @@
     width:36px; height:36px; border-radius:50%;
     border:1px solid rgba(2,8,23,.1); background:#fff;
   }
-  .site-footer .social a:hover{ border-color: var(--brand-2); box-shadow:0 6px 16px rgba(2,8,23,.06); }
-  .site-footer .list-unstyled a{ color:#0d6efd; } /* enlaces azules como en screenshot */
+  .site-footer .social a:hover{ border-color: var(--brand); box-shadow:0 6px 16px rgba(2,8,23,.06); }
+  .site-footer .list-unstyled a{ color:var(--brand); }
   .site-footer .list-unstyled a:hover{ text-decoration:underline; }
   .site-footer .newsletter .form-control{ background:#fff; }
   .site-footer .send-btn{
@@ -84,7 +87,7 @@
 <!-- NAVBAR -->
   <nav id="topNav" class="navbar navbar-expand-lg bg-white sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#"><i class="bi bi-sun-fill text-warning me-2"></i><b>EventosUp • Piura</b></a>
+      <a class="navbar-brand fw-bold" href="#"><i class="bi bi-sun-fill me-2" style="color: var(--brand);"></i><b>EventosUp • Piura</b></a>
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navItems">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -301,9 +304,9 @@
           <h2 class="fw-bold mb-3">Piura hoy</h2>
           <p class="text-secondary">Mantente al día con las actividades comunitarias, ferias y festivales que dinamizan la región. Agrega a tu calendario, comparte con tu barrio y participa.</p>
           <ul class="list-unstyled small">
-            <li class="mb-2"><i class="bi bi-check-circle text-success me-2"></i> Eventos curados por categoría y distrito</li>
-            <li class="mb-2"><i class="bi bi-check-circle text-success me-2"></i> Señalización de <b>GRATIS</b> y opciones de pago</li>
-            <li class="mb-2"><i class="bi bi-check-circle text-success me-2"></i> Recordatorios por correo y QR inmediato</li>
+            <li class="mb-2"><i class="bi bi-check-circle text-primary me-2"></i> Eventos curados por categoría y distrito</li>
+            <li class="mb-2"><i class="bi bi-check-circle text-primary me-2"></i> Señalización de <b>GRATIS</b> y opciones de pago</li>
+            <li class="mb-2"><i class="bi bi-check-circle text-primary me-2"></i> Recordatorios por correo y QR inmediato</li>
           </ul>
         </div>
       </div>
