--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="api.js"></script>
 
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
@@ -390,32 +391,90 @@
     function switchToSignup(e){ e?.preventDefault?.(); document.getElementById('modalLogin').classList.add('d-none'); document.getElementById('modalSignup').classList.remove('d-none'); document.querySelector('#authModal .modal-title').textContent='Crea tu cuenta'; }
     window.switchToLogin = switchToLogin; window.switchToSignup = switchToSignup;
 
-    // Demo de envío (registro rápido y modal)
-    function mockSubmit(form, successMsg){
-      form.addEventListener('submit', (e)=>{
-        e.preventDefault();
-        const btn = form.querySelector('button[type="submit"], button.btn-grad, .btn-grad');
-        if(btn){ btn.disabled = true; btn.innerHTML = '<span class="spinner-border spinner-border-sm me-2"></span>Enviando'; }
-        setTimeout(()=>{
-          if(btn){ btn.disabled = false; btn.textContent = btn.dataset.originalText || 'Crear cuenta'; }
-          const toast = document.createElement('div');
-          toast.className = 'toast align-items-center text-bg-dark border-0 position-fixed bottom-0 end-0 m-3';
-          toast.setAttribute('role','alert');
-          toast.innerHTML = `<div class="d-flex">
-              <div class="toast-body">${successMsg}</div>
-              <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
-            </div>`;
-          document.body.appendChild(toast);
-          new bootstrap.Toast(toast, {delay:2500}).show();
-          form.reset();
-          const modalEl = document.getElementById('authModal');
-          if(modalEl) bootstrap.Modal.getInstance(modalEl)?.hide();
-        }, 900);
-      });
+    // Funciones para manejar sesión y UI
+    function updateAuthUI(){
+      const sessionUser = API.me();
+      const joinBtn = document.querySelector('button[data-bs-target="#authModal"]');
+      if(sessionUser){
+        joinBtn.textContent = `Hola, ${sessionUser.name || sessionUser.email}`;
+        joinBtn.classList.remove('btn-grad');
+        joinBtn.classList.add('btn-outline-primary');
+        joinBtn.onclick = () => {
+          // Mostrar opciones de cuenta o logout
+          if(confirm('¿Cerrar sesión?')) {
+            API.logout();
+            updateAuthUI();
+          }
+        };
+      } else {
+        joinBtn.textContent = 'Únete gratis';
+        joinBtn.classList.remove('btn-outline-primary');
+        joinBtn.classList.add('btn-grad');
+        joinBtn.onclick = null;
+      }
     }
-    document.querySelectorAll('button.btn-grad').forEach(b=> b.dataset.originalText = b.textContent);
-    mockSubmit(document.getElementById('quickSignup'), '¡Listo! Te enviaremos el resumen semanal.');
-    mockSubmit(document.getElementById('modalSignup'), 'Cuenta creada. Bienvenido/a 👋');
+
+    // Manejo de login y registro con API real
+    document.getElementById('quickSignup').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const form = e.target;
+      const name = form.name.value.trim();
+      const email = form.email.value.trim();
+      const district = form.district.value;
+      if(!name || !email || !district) return alert('Por favor completa todos los campos.');
+      const pass = 'defaultpass'; // No password in quick signup, could be improved
+      const res = API.register({name, email, pass});
+      if(res.ok){
+        alert('¡Listo! Te enviaremos el resumen semanal.');
+        form.reset();
+        updateAuthUI();
+        const modalEl = document.getElementById('authModal');
+        if(modalEl) bootstrap.Modal.getInstance(modalEl)?.hide();
+      } else {
+        alert(res.msg || 'Error al crear cuenta.');
+      }
+    });
+
+    document.getElementById('modalSignup').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const form = e.target;
+      const name = form.name.value.trim();
+      const email = form.email.value.trim();
+      const pass = form.pass.value;
+      if(!name || !email || !pass) return alert('Por favor completa todos los campos.');
+      const res = API.register({name, email, pass});
+      if(res.ok){
+        alert('Cuenta creada. Bienvenido/a 👋');
+        form.reset();
+        updateAuthUI();
+        const modalEl = document.getElementById('authModal');
+        if(modalEl) bootstrap.Modal.getInstance(modalEl)?.hide();
+      } else {
+        alert(res.msg || 'Error al crear cuenta.');
+      }
+    });
+
+    document.getElementById('modalLogin').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const form = e.target;
+      const email = form.querySelector('input[type="email"]').value.trim();
+      const pass = form.querySelector('input[type="password"]').value;
+      if(!email || !pass) return alert('Por favor completa todos los campos.');
+      const res = API.login(email, pass);
+      if(res.ok){
+        alert(`Bienvenido ${res.user.name || res.user.email}`);
+        form.reset();
+        updateAuthUI();
+        const modalEl = document.getElementById('authModal');
+        if(modalEl) bootstrap.Modal.getInstance(modalEl)?.hide();
+      } else {
+        alert(res.msg || 'Error al iniciar sesión.');
+      }
+    });
+
+    document.addEventListener('DOMContentLoaded', () => {
+      updateAuthUI();
+    });
 
   </script>
 </body>
