--- a/profile.html
+++ b/profile.html
@@ -25,8 +25,8 @@
       <div class="collapse navbar-collapse" id="navMain">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link active" href="profile.html">Mi Perfil</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html#login">Ingresar</a></li>
+          <li class="nav-item"><a class="nav-link" href="eventos1.html">Eventos</a></li>
+          <li class="nav-item"><a class="nav-link" href="profile.html">Mi perfil</a></li>
           <li class="nav-item ms-lg-3">
             <button class="btn btn-sm btn-gradient d-flex align-items-center" type="button" data-bs-toggle="offcanvas" data-bs-target="#cartOffcanvas" aria-controls="cartOffcanvas" aria-label="Abrir carrito">
               <i class="bi bi-bag-check me-2"></i>Carrito
