--- a/eventos1.html
+++ b/eventos1.html
@@ -11,18 +11,15 @@
 <body>
 <nav class="navbar navbar-expand-lg sticky-top bg-white shadow-sm" aria-label="Barra de navegación principal">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html" aria-label="Ir al inicio">
-      <i class="bi bi-stars text-warning"></i>
-      <span class="ms-1">Eventos</span>
-    </a>
+      <a class="navbar-brand fw-bold" href="#"><i class="bi text-warning me-2"></i><b>Pievi</b></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain" aria-controls="navMain" aria-expanded="false" aria-label="Alternar navegación">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navMain">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
-        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link active" href="profile.html">Mi Perfil</a></li>
-        <li class="nav-item"><a class="nav-link" href="index.html#login">Ingresar</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="eventos1.html">Eventos</a></li>
+          <li class="nav-item"><a class="nav-link" href="profile.html">Mi perfil</a></li>  
         <li class="nav-item ms-lg-3">
           <button class="btn btn-sm btn-gradient d-flex align-items-center" type="button" data-bs-toggle="offcanvas" data-bs-target="#cartOffcanvas" aria-controls="cartOffcanvas" aria-label="Abrir carrito">
             <i class="bi bi-bag-check me-2"></i>Carrito
