--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav id="topNav" class="navbar navbar-expand-lg bg-white sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#"><i class="bi bi-sun-fill text-warning me-2"></i><b>EventosUp • Piura</b></a>
+      <a class="navbar-brand fw-bold" href="#"><i class="bi text-warning me-2"></i><b>Pievi</b></a>
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navItems">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -479,3 +479,4 @@
   </script>
 </body>
 </html>
+
