--- a/eventos1.html
+++ b/eventos1.html
@@ -384,8 +384,7 @@
       <!-- Marca + descripción + redes -->
       <div class="col-lg-4">
         <div class="d-flex align-items-center mb-2">
-          <i class="bi bi-music-note-beamed me-2"></i>
-          <span class="title">Eventos</span>
+          <span class="title">Pievi</span>
         </div>
         <p class="text-secondary mb-3">Encuentra y vive experiencias inolvidables.</p>
         <div class="d-flex gap-2 social">
