--- a/confirmacion.html
+++ b/confirmacion.html
@@ -97,8 +97,7 @@ a { text-decoration: none; }
     <div class="row gy-4">
       <div class="col-lg-4">
         <div class="d-flex align-items-center mb-2">
-          <i class="bi bi-music-note-beamed me-2"></i>
-          <span class="title">Eventos</span>
+          <span class="title">Pievi</span>
         </div>
         <p class="text-secondary mb-3">Encuentra y vive experiencias inolvidables.</p>
         <div class="d-flex gap-2 social">
@@ -159,3 +158,4 @@ a { text-decoration: none; }
   <script src="confirmacion.js"></script>
 </body>
 </html>
+
