--- a/DetalleCarrito.html
+++ b/DetalleCarrito.html
@@ -200,8 +200,7 @@ a { text-decoration: none; }
     <div class="row gy-4">
       <div class="col-lg-4">
         <div class="d-flex align-items-center mb-2">
-          <i class="bi bi-music-note-beamed me-2"></i>
-          <span class="title">Eventos</span>
+          <span class="title">Pievi</span>
         </div>
         <p class="text-secondary mb-3">Encuentra y vive experiencias inolvidables.</p>
         <div class="d-flex gap-2 social">
@@ -266,3 +265,4 @@ a { text-decoration: none; }
   <script src="checkout.js"></script>
 </body>
 </html>
+
