--- a/confirmacion.html
+++ b/confirmacion.html
@@ -63,18 +63,15 @@ a { text-decoration: none; }
 <body>
     <nav class="navbar navbar-expand-lg sticky-top" aria-label="Barra de navegación principal">
         <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html" aria-label="Ir al inicio">
-            <i class="bi bi-stars text-warning"></i>
-            <span class="ms-1">Eventos</span>
-        </a>
+      <a class="navbar-brand fw-bold" href="#"><i class="bi text-warning me-2"></i><b>Pievi</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain" aria-controls="navMain" aria-expanded="false" aria-label="Alternar navegación">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navMain">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
-            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link" href="profile.html">Mi Perfil</a></li>
-            <li class="nav-item"><a class="nav-link" href="index.html#login">Ingresar</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="eventos1.html">Eventos</a></li>
+          <li class="nav-item"><a class="nav-link" href="profile.html">Mi perfil</a></li>
             </ul>
         </div>
         </div>
@@ -158,4 +155,5 @@ a { text-decoration: none; }
   <script src="confirmacion.js"></script>
 </body>
 </html>
+
 
